Kommentare zu den Klassen Books, Collection und Collection Manager überarbeitet